# bard-api-rs

./: Cargo.toml
examples/continually/: main.rs
examples/single/: main.rs
src/: lib.rs
